# rivvo

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
migrations/: 001_initial.sql  002_fix_constraints.sql
scripts/: seed.sql
src/: config.rs  db.rs  errors.rs  main.rs  vault.rs
src/handlers/: auth.rs  boards.rs  comments.rs  health.rs  mod.rs  organizations.rs  posts.rs  tags.rs  votes.rs
src/middleware/: auth.rs
src/models/: board.rs  comment.rs  mod.rs  organization.rs  post.rs  tag.rs  user.rs  vote.rs
src/services/: auth_service.rs  board_service.rs  comment_service.rs  mod.rs  org_service.rs  post_service.rs  tag_service.rs  vote_service.rs
src/utils/: jwt.rs  mod.rs  slugify.rs
tests/: api_tests.rs
tests/common/: mod.rs
web/: index.html  package.json  tsconfig.node.json  vite.config.ts
web/src/: App.vue
web/src/__tests__/: App.spec.ts
web/src/assets/styles/: main.css
web/src/components/feedback/: CommentForm.vue  CommentItem.vue  NewPostForm.vue  PostCard.vue  StatusBadge.vue  TagBadge.vue  VoteButton.vue
web/src/components/layout/: AppFooter.vue  AppNavbar.vue  AppSidebar.vue  Navbar.vue  Sidebar.vue
web/src/composables/: useApi.ts
web/src/router/: index.ts
web/src/stores/: auth.ts  board.ts  org.ts  post.ts
web/src/stores/__tests__/: auth.spec.ts  board.spec.ts  org.spec.ts  (+1 more)
web/src/types/: index.ts
web/src/views/: BoardDetailView.vue  BoardView.vue  ChangelogView.vue  LandingView.vue  LoginView.vue  PostDetailView.vue  RoadmapView.vue
(+7 files in other folders)
