[package]
name = "rivvo"
version = "0.1.0"
edition = "2024"

[features]
default = []
vault = ["dep:reqwest"]

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "10.3.0"
argon2 = "0.5"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
validator = { version = "0.20", features = ["derive"] }
slug = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
